--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
 					<a class="nav-link" href="#about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#games">Projects</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#contact">Contact</a>
+					<a class="nav-link" href="#project">Projects</a>
 				</li>
 			</ul>
 		</div>
@@ -79,46 +76,61 @@
 <div class="container mt-5" id="about">
 	<div class="row">
 		<div class="col-lg-12 my-5">
-			<h2>About Me!</h2>
+			<h2 class="text-center">About Me!</h2>
 			<p class="lead">I'm a competitive person with great personality. I also like to develop games on my spare time.</p>
 		</div>
-		<div class="col-lg-6">
+		<div class="col-lg-4 col-md-4 my-5">
 			<h2>Front-end</h2>
 			<ul class="list-group list-group-flush lead">
 				<li class="list-group-item">
-					<p>HTML</p>
+					<i class="fab fa-html5 fa-2x"></i>
+					<label>HTML</label>
 				</li>
 				<li class="list-group-item">
-					<p>CSS</p>
+					<i class="fab fa-css3-alt fa-2x"></i>
+					<label>CSS</label>
 				</li>
 				<li class="list-group-item">
-					<p>JavaScript</p>
+					<i class="fab fa-js fa-2x"></i>
+					<label>JavaScript</label>
 				</li>
 				<li class="list-group-item">
-					<p>Bootstrap</p>
+					<i class="fab fa-bootstrap fa-2x"></i>
+					<label>Bootstrap</label>
 				</li>
 				<li class="list-group-item">
-					<p>Photoshop</p>
+					<label>Jquery</label>
 				</li>
 			</ul>
 		</div>
-		<div class="col-lg-6">
+		<div class="col-lg-4 col-md-4 my-5">
 			<h2>Back-end</h2>
 			<ul class="list-group list-group-flush lead">
 				<li class="list-group-item">
-					<p>PHP</p>
+					<i class="fab fa-php fa-2x"></i>
+					<label>PHP</label>
 				</li>
 				<li class="list-group-item">
-					<p>Godot ( Game Engine )</p>
-				</li>
-				<li class="list-group-item">
-					<p>MySQL</p>
+					<i class="fas fa-database fa-2x"></i>
+					<label>MySQL</label>
 				</li>
 				<li class="list-group-item">
 					<p>CodeIgniter</p>
 				</li>
 			</ul>
 		</div>
+		<div class="col-lg-4 col-md-4 my-5">
+			<h2>Other Technologies</h2>
+			<ul class="list-group list-group-flush lead">
+				<li class="list-group-item">
+					<label>Godot</label>
+				</li>
+				<li class="list-group-item">
+					<label>Photoshop</label>
+				</li>
+			</ul>
+		</div>
+		
 	</div>
 	
 </div>
@@ -126,9 +138,9 @@
 
 <!--===========================Games====================================-->
 <div class="container">
-	<h2 class="text-center mb-5">Projects</h2>
+	<h2 id="project" class="text-center mb-5">Projects</h2>
 	<div class="row">
-		<div class="col-lg-4 col-md-4">
+		<div class="col-lg-4 col-md-4 col-sm-6">
 			<div class="card mb-5">
 				<div class="card-body">
 					<img  class="card-img-top" src="assets/image/game_1.png">
@@ -140,7 +152,7 @@
 				</div>
 			</div>	
 		</div>
-		<div class="col-lg-4 col-md-4">
+		<div class="col-lg-4 col-md-4 col-sm-6">
 			<div class="card mb-5">
 				<div class="card-body">
 					<img  class="card-img-top" src="assets/image/game_2.png">
@@ -152,7 +164,7 @@
 				</div>
 			</div>	
 		</div>
-		<div class="col-lg-4 col-md-4">
+		<div class="col-lg-4 col-md-4 col-sm-6">
 			<div class="card mb-5">
 				<div class="card-body">
 					<img  class="card-img-top" src="assets/image/game_3.jpg">
@@ -169,40 +181,26 @@
 <!--===========================Games end====================================-->
 
 
-<!--===========================Contact====================================-->
+<!--===========================Contact====================================
+
 <div class="container mt-5 text-center" id="contact">
 	<div class="jumbotron">
-		<div><h2>Contact</h2></div>
+		<h2>Contact</h2>
 		<div class="row mt-5">
-			<div class="col-lg-12">
-				<label>
-				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-  				<path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-				</svg>
-				<label class="lead">Christian Paul Cirera</label>
-				</label>
+			<div class="col-4">
+					<i class="fab fa-facebook fa-3x"></i>
 			</div> 
-			<div class="col-lg-12">
-				<label>
-				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-  				<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
-				</svg>
-				<label class="lead">Cirerachristian@gmail.com</label>
-				</label>
+			<div class="col-4">
+					<i class="fas fa-envelope-square fa-2x"></i>
 			</div> 
-			<div class="col-lg-12">
-				<label>
-				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-  				<path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-				</svg>
-				<label class="lead">09266238947</label>
-				</label>
+			<div class="col-4">
+					<i class="fas fa-phone fa-2x"></i>
 			</div> 
 		</div>
 	</div>
 </div>
 
-<!--===========================Contact end====================================-->
+===========================Contact end====================================-->
 
 <!--===========================Footer====================================-->
 
@@ -218,20 +216,8 @@
 
 
 
-
-<script type="text/javascript" src="assets/js/anime.min.js"></script>
-<script type="text/javascript">
-
-	var elements = document.querySelectorAll('.animate');
-
-	var animation = anime({
-		targets:elements,
-	  	scale:1.2,
-	  	duration:1500,
-	  	delay: anime.stagger(100)
-	});
-
-</script>
+<!--fontawesome-->
+<script src="https://kit.fontawesome.com/7d27947462.js" crossorigin="anonymous"></script>
 <!--Jquery-->
 <script type="text/javascript" src="assets/js/jquery.js"></script>
 <!--Popper-->
