--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<p class="card-text">Wave shooter game, pew pew.</p>
 				</div>
 				<div class="card-footer">
-					<a target="_blank" class="btn btn-primary" href="https://m4sterpaul18.itch.io/little-soul">Play</a>
+					<a target="_blank" class="btn btn-primary" href="https://m4sterpaul18.itch.io/boxn-lazers">Play</a>
 				</div>
 			</div>	
 		</div>
